# Krishaa-Support-Chatbot-agent

./: .env.example  .gitconfig  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  logging_config.py  schemas.py
app/agent/: __init__.py  graph.py  judge.py  lead_capture.py  memory.py  prompts.py  response_builder.py  safety.py  tools.py
app/feedback/: feedback_store.py
app/notifications/: __init__.py  email.py
app/observability/: langsmith.py
app/prompts/: prompt_manager.py  v10_planning_memory_prompt.txt  v11_adaptive_prompt.txt  v1_zero_shot_prompt.txt  v2_few_shots_prompt.txt  v3_role_bases_prompt.txt  v4_structured_output_prompt.txt  v5_chain_of_thoughts_prompt.txt  v7_guardrail_prompt_safety_escalation.txt  v8_context_injection_prompt_advanced.txt  v9_tool_agent_prompt.txt
app/retrieval/: qdrant_client.py
app/ui/: gradio_app.py
demo/: chat-widget.html
docs/: demo_script.md  engineering_product_justification.md  evaluation_report.md  phase1_problem_framing_document.md  phase2_baseline_agent.md  phase3_smart_agent.md  phase4_smart_agent_with_rag.md  phase5_smart_agent_with_rag_tools.md  phase6_planning_memory_context.md  phase7_adaptive_behaviour.md  phase8_deployment_readiness.md  phase9_evaluation_engineering_review.md  problem_framing.md  prompt_comparison.md
tests/: test_agent.py  test_lead_capture.py  test_retrieval.py  test_safety.py
