[project]
name = "engineering-products-rag-chatbot"
version = "0.1.0"
description = "Production-ready RAG chatbot for engineering products"
requires-python = ">=3.10"
dependencies = [
  "gradio==4.44.1",
  "huggingface-hub==0.25.2",
  "pydantic>=2.0,<2.11",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "qdrant-client>=1.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
